modules/gdscript/tests/scripts/analyzer/errors/nullable_attribute_access.gd
class A:
    var foo: String = "bar"

func test():
    var foo: A? = null
    foo.foo